--- a/journal/202206.md
+++ b/journal/202206.md
@@ -211,7 +211,14 @@ _dcrdocs is the source code for Decred [user documentation](https://docs.decred.
 
 { _Check https://github.com/decred/dcrdocs/commits/master ._}
 
-- {}
+- Updated [CoinShuffle++ server name](https://github.com/decred/dcrdocs/commit/ea5b180266fba30949a592533ba19e20b335a128). 
+- Updated [block reward values](https://github.com/decred/dcrdocs/commit/6648a1829d76085822ee4fc53436b018bd84f1ac) from 60/30/10 to 10/80/10 as defined in [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki).
+- Advanced issuance page now makes use of [SVGs for the images](https://github.com/decred/dcrdocs/pull/1200) instead of PNGs since they scale better and are easier to modify if needed in the future.
+- Updated [per vote percentage](https://github.com/decred/dcrdocs/commit/23d6ff35f6b4f37ad8a25bdcd05f2968c06ac5f4) in issuance docs from 6% to each of the 5 voters chosen in a block to 16%.
+- Fixes made to [dark mode only](https://github.com/decred/dcrdocs/commit/01435bfdfbf5aaf25ab461ffdf56df487ab61dbf) images.
+- Updates to [issuance docs](https://github.com/decred/dcrdocs/commit/9ec3374c8abe729c5e7a7fb9a0a6cf5f1e54bff2) for [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki), including new graphs. (SS Candidate!)
+- Added [vote version](https://github.com/decred/dcrdocs/commit/ce90ba81e24f86859d53cddb2a6c1d1f5a868ed6) release dates.
+- Added [1.7 consensus votes](https://github.com/decred/dcrdocs/commit/118fc88d2f32bb807fd703043286ff57018015ec) to archive. 
 
 <a id="dcrweb" />
 
