--- a/journal/202206.md
+++ b/journal/202206.md
@@ -228,7 +228,11 @@ _dcrweb is the source code for the decred.org website._
 
 { _Check https://github.com/decred/dcrweb/commits/master ._}
 
-- {}
+- Added GoDCR to the [wallets page](https://github.com/decred/dcrweb/commit/15c03d0cdf21d11094c8d5934d2a05a1d0af11c4).
+- [Removed 1.6](https://github.com/decred/dcrweb/commit/ba7cf322242ceadf1ec95c8fbe4d9b65e165ae76) release page.
+- [Updated](https://github.com/decred/dcrweb/commit/7171f03fe98e5a993f888dfc6713b0eb2dc3fcd0) Hugo, nginx, and Lottie webplayer. 
+- Removed [contributors page](https://github.com/decred/dcrweb/commit/95ad997a7a115a1ed9f4f3b853f620460221bfea).
+- Added [disclaimer to exchanges page](https://github.com/decred/dcrweb/commit/08d4602f7ade5d54645af42b3678f65a18b171b9) letting users know only DCRDEX is self custodial and will not request additional information.
 
 { _Check for other new/updated repos in:_
 
