--- a/journal/202206.md
+++ b/journal/202206.md
@@ -99,7 +99,26 @@ _Politeia is Decred's proposal system. It is used to request funding from the De
 
 }
 
-- {}
+Backend:
+
+- Improved [error handling](https://github.com/decred/politeia/commit/950620c1aa9fc862b455e2126281aed5eea60d15) in mysql.
+- Improved [identity logging](https://github.com/decred/politeia/commit/9446fc219752e051ae48c62487e71572b1925ab6).
+- Updated and improved [signal-handling](https://github.com/decred/politeia/commit/68b24c437d444b5735d78e0f716b886fb92e53ba) logic in politeiavoter by supporting SIGTERM.
+- 2 commits representing improvements/corrections.
+
+politeiagui:
+
+- GUI theme [now persists](https://github.com/decred/politeiagui/commit/f3dc85eb50f872dce0a9aae6f413d894f82813d3) on page refresh.
+- [Comment links](https://github.com/decred/politeiagui/commit/43f9e7397f0fca5640cda5e28efef0bb042abbc2) on proposal list.
+- Fixes to [plugins setup](https://github.com/decred/politeiagui/commit/f7f3de283becca95f1c523d8a04b7faba2bcef6e).
+- [Webpack](https://github.com/decred/politeiagui/commit/d140eab66f1bf1d201e05cbf4b8885f777f8cd30) fixes.
+- Added [proposal](https://github.com/decred/politeiagui/commit/bb0ea21cca6af41de761f176ad314776998f6ecf) details attachments.
+- Proposals [user experience improvements](https://github.com/decred/politeiagui/commit/42e4ea1c8a8491352fa3c042d80e55e7cfbdc1e8).
+- Added [Proposal new page](https://github.com/decred/politeiagui/commit/a2357fa790d039afd087309b8eeac4812b7e8788#diff-615014f57902999c6f0d64d01228a50cfc7e34ae3914eafa8a4bfc048236ee4b). (?)
+- Minor [visual enhancements](https://github.com/decred/politeiagui/commit/494e6cebb86f6af9d8df807762621401859e14e5) for proposals.
+- Fixed the submission of [empty comments](https://github.com/decred/politeiagui/commit/6dee2571b3c06110a728ab3c461dd8df30e7f6ef).
+- Allow [dropdown header](https://github.com/decred/pi-ui/commit/dbfbb3ae582410d51b23482d5bb8e37cba6d0dc9) customization.
+- Various other optimizations and improvements.
 
 <a id="vspd" />
 
