Dev change to PR links + nits

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -77,7 +77,7 @@ _dcrwallet is a wallet server used by command-line and graphical wallet applicat
 
 { _Check https://github.com/decred/dcrwallet/commits/master ._}
 
-- [Do not require](https://github.com/decred/dcrwallet/pull/2168) V1 compact filters support when querying HTTPS seeder for nodes.
+- [Do not require](https://github.com/decred/dcrwallet/pull/2168) deprecated V1 compact filters support when querying HTTPS seeder for nodes.
 
 <a id="decrediton" />
 
@@ -88,7 +88,7 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 { _Check https://github.com/decred/decrediton/commits/master ._}
 
 - Added a [ticket spent](https://github.com/decred/decrediton/pull/3770) entry to the revocation transaction details page.
-- [Fixed a bug](https://github.com/decred/decrediton/pull/3771) where scrolling didn't work when UI animations were disabled.
+- Fixed a bug where [scrolling didn't](https://github.com/decred/decrediton/pull/3771) work when UI animations were disabled.
 - Fixed a bug in the Treasury Spending tab where a [never ending loading](https://github.com/decred/decrediton/pull/3769) button would occur.
 
 <a id="politeia" />
@@ -107,23 +107,23 @@ _Politeia is Decred's proposal system. It is used to request funding from the De
 
 Backend:
 
-- Improved [error handling](https://github.com/decred/politeia/commit/950620c1aa9fc862b455e2126281aed5eea60d15) in mysql.
-- Improved [identity logging](https://github.com/decred/politeia/commit/9446fc219752e051ae48c62487e71572b1925ab6).
-- Updated and improved [signal-handling](https://github.com/decred/politeia/commit/68b24c437d444b5735d78e0f716b886fb92e53ba) logic in politeiavoter by supporting SIGTERM.
+- Improved [error handling](https://github.com/decred/politeia/pull/1650) in mysql.
+- Improved [identity logging](https://github.com/decred/politeia/pull/1647).
+- Updated and improved [signal-handling](https://github.com/decred/politeia/pull/1644) logic in politeiavoter by supporting SIGTERM.
 - 2 commits representing improvements/corrections.
 
 politeiagui:
 
-- GUI theme [now persists](https://github.com/decred/politeiagui/commit/f3dc85eb50f872dce0a9aae6f413d894f82813d3) on page refresh.
-- [Comment links](https://github.com/decred/politeiagui/commit/43f9e7397f0fca5640cda5e28efef0bb042abbc2) on proposal list.
-- Fixes to [plugins setup](https://github.com/decred/politeiagui/commit/f7f3de283becca95f1c523d8a04b7faba2bcef6e).
-- [Webpack](https://github.com/decred/politeiagui/commit/d140eab66f1bf1d201e05cbf4b8885f777f8cd30) fixes.
-- Added [proposal](https://github.com/decred/politeiagui/commit/bb0ea21cca6af41de761f176ad314776998f6ecf) details attachments.
-- Proposals [user experience improvements](https://github.com/decred/politeiagui/commit/42e4ea1c8a8491352fa3c042d80e55e7cfbdc1e8).
-- Added [Proposal new page](https://github.com/decred/politeiagui/commit/a2357fa790d039afd087309b8eeac4812b7e8788#diff-615014f57902999c6f0d64d01228a50cfc7e34ae3914eafa8a4bfc048236ee4b). (?)
-- Minor [visual enhancements](https://github.com/decred/politeiagui/commit/494e6cebb86f6af9d8df807762621401859e14e5) for proposals.
-- Fixed the submission of [empty comments](https://github.com/decred/politeiagui/commit/6dee2571b3c06110a728ab3c461dd8df30e7f6ef).
-- Allow [dropdown header](https://github.com/decred/pi-ui/commit/dbfbb3ae582410d51b23482d5bb8e37cba6d0dc9) customization.
+- GUI theme [now persists](https://github.com/decred/politeiagui/pull/2801) on page refresh.
+- [Comment links](https://github.com/decred/politeiagui/pull/2802) on proposal list.
+- Fixes to [plugins setup](https://github.com/decred/politeiagui/pull/2799).
+- [Webpack](https://github.com/decred/politeiagui/pull/2798) fixes.
+- Added [proposal](https://github.com/decred/politeiagui/pull/2792) details attachments.
+- Proposals [user experience improvements](https://github.com/decred/politeiagui/pull/2795).
+- Added [Proposal new page](https://github.com/decred/politeiagui/pull/2751). { ? }
+- Minor [visual enhancements](https://github.com/decred/politeiagui/pull/2780) for proposals.
+- Fixed the submission of [empty comments](https://github.com/decred/politeiagui/pull/2783).
+- Allow [dropdown header](https://github.com/decred/pi-ui/pull/455) customization.
 - Various other optimizations and improvements.
 
 <a id="vspd" />
@@ -134,8 +134,8 @@ _vspd is server software for running a Voting Service Provider. A VSP votes on b
 
 { _Check https://github.com/decred/vspd/commits/master ._}
 
-- 5 Commits representing various optimizations, notably the removal of [global loggers](https://github.com/decred/vspd/commit/ebcfe0e5e945721a9564bb67d121b4874c18f37a).
-- Updated to [gin 1.8.1](https://github.com/decred/vspd/commit/63ce069a88112ba4b2d733bdb6abd72fff9ba1be).
+- 5 Commits representing various optimizations, notably the removal of [global loggers](https://github.com/decred/vspd/pull/350).
+- Updated to [gin 1.8.1](https://github.com/decred/vspd/pull/349).
 
 <a id="dcrlnd" />
 
@@ -145,12 +145,10 @@ _dcrlnd is Decred's Lightning Network node software. LN enables instant and low-
 
 { _Check https://github.com/decred/dcrlnd/commits/master ._}
 
-- Fixed the [expected location](https://github.com/decred/dcrlnd/commit/7b097cf9c413c9c4016924b36ea07ce57d2d64c6) of the peers.json file when running an embedded dcrwallet install in SPV mode.
-- 'initchainsync' service is now started [after unlocking the wallet](https://github.com/decred/dcrlnd/commit/a6fcad77f0de4cd08e544a1d44c58036cbce6551). This new service can be used to track the progress of the initial chain sync process and is useful for clients that connect to a dcrlnd instance that is still in the initial startup stage to provide better feedback to the user.
-- Added a new RPC service that [provides endpoints to track](https://github.com/decred/dcrlnd/commit/567a3eca356c2495674052d39dda62a2f3332d42) the
-progress of the initial chain sync that happens after an LN wallet is
-created or unlocked but before the full RPC services are available.
-- Bumped [version](https://github.com/decred/dcrlnd/commit/895e4ff34c38fab02d3fa5db119c5087e8e688a9) to v0.3.5.
+- Fixed the [expected location](https://github.com/decred/dcrlnd/pull/159) of the peers.json file when running an embedded dcrwallet install in SPV mode.
+- 'initchainsync' service is now started [after unlocking the wallet](https://github.com/decred/dcrlnd/pull/158). This new service can be used to track the progress of the initial chain sync process and is useful for clients that connect to a dcrlnd instance that is still in the initial startup stage to provide better feedback to the user.
+- Added a new RPC service that [provides endpoints to track](https://github.com/decred/dcrlnd/pull/158) the progress of the initial chain sync that happens after an LN wallet is created or unlocked but before the full RPC services are available.
+- Bumped [version](https://github.com/decred/dcrlnd/pull/158) to v0.3.5.
 - 4 commits representing various code optimizations/improvements.
 
 
@@ -242,9 +240,9 @@ _dcrdata is an explorer for Decred blockchain and off-chain data like Politeia p
 
 { _Check https://github.com/decred/dcrdata/commits/master ._}
 
-- [Updated](https://github.com/decred/dcrdata/commit/1ffabcb9e12a654fc598b1a4e7d6c4433b55aadd) btcd in swapscan-btc.
-- Bumped [module](https://github.com/decred/dcrdata/commit/a8c7caceb3d1b3bc8a6fd2bf1e584ed31dc8bd4d) major versions.
-- Fixed incorrect [vote status](https://github.com/decred/dcrdata/commit/42f99bfd9d737f84276ccec0f491a04b730a5478) display. 
+- [Updated](https://github.com/decred/dcrdata/pull/1922) btcd in swapscan-btc.
+- Bumped [module](https://github.com/decred/dcrdata/pull/1922) major versions.
+- Fixed incorrect [vote status](https://github.com/decred/dcrdata/pull/1919) display. 
 
 **[dcrdocs](https://github.com/decred/dcrdocs)**
 
@@ -252,14 +250,16 @@ _dcrdocs is the source code for Decred [user documentation](https://docs.decred.
 
 { _Check https://github.com/decred/dcrdocs/commits/master ._}
 
-- Updated [CoinShuffle++ server name](https://github.com/decred/dcrdocs/commit/ea5b180266fba30949a592533ba19e20b335a128). 
-- Updated [block reward values](https://github.com/decred/dcrdocs/commit/6648a1829d76085822ee4fc53436b018bd84f1ac) from 60/30/10 to 10/80/10 as defined in [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki).
+- Updated [CoinShuffle++ server name](https://github.com/decred/dcrdocs/pull/1204). 
+- Updated [block reward values](https://github.com/decred/dcrdocs/pull/1202) from 60/30/10 to 10/80/10 as defined in [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki).
 - Advanced issuance page now makes use of [SVGs for the images](https://github.com/decred/dcrdocs/pull/1200) instead of PNGs since they scale better and are easier to modify if needed in the future.
-- Updated [per vote percentage](https://github.com/decred/dcrdocs/commit/23d6ff35f6b4f37ad8a25bdcd05f2968c06ac5f4) in issuance docs from 6% to each of the 5 voters chosen in a block to 16%.
-- Fixes made to [dark mode only](https://github.com/decred/dcrdocs/commit/01435bfdfbf5aaf25ab461ffdf56df487ab61dbf) images.
-- Updates to [issuance docs](https://github.com/decred/dcrdocs/commit/9ec3374c8abe729c5e7a7fb9a0a6cf5f1e54bff2) for [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki), including new graphs. (SS Candidate!)
-- Added [vote version](https://github.com/decred/dcrdocs/commit/ce90ba81e24f86859d53cddb2a6c1d1f5a868ed6) release dates.
-- Added [1.7 consensus votes](https://github.com/decred/dcrdocs/commit/118fc88d2f32bb807fd703043286ff57018015ec) to archive. 
+- Updated [per vote percentage](https://github.com/decred/dcrdocs/pull/1201) in issuance docs from 6% to each of the 5 voters chosen in a block to 16%.
+- Fixes made to [dark mode only](https://github.com/decred/dcrdocs/pull/1199) images.
+- Updates to [issuance docs](https://github.com/decred/dcrdocs/pull/1198) for [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki), including new graphs.
+- Added [vote version](https://github.com/decred/dcrdocs/pull/1197) release dates.
+- Added [1.7 consensus votes](https://github.com/decred/dcrdocs/pull/1197) to archive.
+
+{ image candidates: 1198 }
 
 <a id="dcrweb" />
 
@@ -269,11 +269,11 @@ _dcrweb is the source code for the decred.org website._
 
 { _Check https://github.com/decred/dcrweb/commits/master ._}
 
-- Added GoDCR to the [wallets page](https://github.com/decred/dcrweb/commit/15c03d0cdf21d11094c8d5934d2a05a1d0af11c4).
-- [Removed 1.6](https://github.com/decred/dcrweb/commit/ba7cf322242ceadf1ec95c8fbe4d9b65e165ae76) release page.
-- [Updated](https://github.com/decred/dcrweb/commit/7171f03fe98e5a993f888dfc6713b0eb2dc3fcd0) Hugo, nginx, and Lottie webplayer. 
-- Removed [contributors page](https://github.com/decred/dcrweb/commit/95ad997a7a115a1ed9f4f3b853f620460221bfea).
-- Added [disclaimer to exchanges page](https://github.com/decred/dcrweb/commit/08d4602f7ade5d54645af42b3678f65a18b171b9) letting users know only DCRDEX is self custodial and will not request additional information.
+- Added GoDCR to the [wallets page](https://github.com/decred/dcrweb/pull/1044). { _July but we can make 1 small exception_ }
+- [Removed 1.6](https://github.com/decred/dcrweb/pull/1049) release page.
+- [Updated](https://github.com/decred/dcrweb/pull/1048) Hugo, nginx, and Lottie webplayer. 
+- Removed [contributors page](https://github.com/decred/dcrweb/pull/1047).
+- Added [disclaimer to exchanges page](https://github.com/decred/dcrweb/pull/1043) letting users know only DCRDEX is self custodial and will not request additional information.
 
 { _Check for other new/updated repos in:_
 
