Dev Politeia move new GUI arch into own list + more

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -107,24 +107,31 @@ _Politeia is Decred's proposal system. It is used to request funding from the De
 
 Backend:
 
-- Improved [error handling](https://github.com/decred/politeia/pull/1650) in mysql.
-- Improved [identity logging](https://github.com/decred/politeia/pull/1647).
-- Updated and improved [signal-handling](https://github.com/decred/politeia/pull/1644) logic in politeiavoter by supporting SIGTERM.
-- 2 commits representing improvements/corrections.
+- Improved [error handling](https://github.com/decred/politeia/pull/1650) in mysql key-value store implementation.
+- Improved [identity logging](https://github.com/decred/politeia/pull/1647) in the dbutil tool.
+- Updated and improved [signal-handling](https://github.com/decred/politeia/pull/1644) logic in politeiavoter by supporting SIGTERM. On Windows, this will shutdown politeiavoter cleanly if the user logs off or if the system is shutting down.
+- 2 commits representing improvements/corrections. { 1643 1646 }
 
-politeiagui:
+GUI:
 
-- GUI theme [now persists](https://github.com/decred/politeiagui/pull/2801) on page refresh.
-- [Comment links](https://github.com/decred/politeiagui/pull/2802) on proposal list.
-- Fixes to [plugins setup](https://github.com/decred/politeiagui/pull/2799).
-- [Webpack](https://github.com/decred/politeiagui/pull/2798) fixes.
-- Added [proposal](https://github.com/decred/politeiagui/pull/2792) details attachments.
-- Proposals [user experience improvements](https://github.com/decred/politeiagui/pull/2795).
-- Added [Proposal new page](https://github.com/decred/politeiagui/pull/2751). { ? }
-- Minor [visual enhancements](https://github.com/decred/politeiagui/pull/2780) for proposals.
+- Proposals [user experience improvements](https://github.com/decred/politeiagui/pull/2795). { _minor, group_ }
 - Fixed the submission of [empty comments](https://github.com/decred/politeiagui/pull/2783).
 - Allow [dropdown header](https://github.com/decred/pi-ui/pull/455) customization.
 - Various other optimizations and improvements.
+
+GUI migration to the new [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure):
+
+- Fixed GUI theme [not saving](https://github.com/decred/politeiagui/pull/2801) on page refresh.
+- Fixed a link go [Comments](https://github.com/decred/politeiagui/pull/2802) on proposals list.
+- Improved UX and handing of [proposal version diffing](https://github.com/decred/politeiagui/pull/2789).
+- Fixes to [plugins setup](https://github.com/decred/politeiagui/pull/2799). { _drop, consider it a part of 2775_ }
+- [Webpack](https://github.com/decred/politeiagui/pull/2798) fixes. { _group_ }
+- Implemented showing of [proposal](https://github.com/decred/politeiagui/pull/2792) attachments.
+- Fixed navigating to [external links](https://github.com/decred/politeiagui/pull/2793).
+- Implemented [default behavior](https://github.com/decred/politeiagui/pull/2775) for plugins to improve experience for developers of new plugins and Politeia-like apps.
+- Implemented [New Proposal](https://github.com/decred/politeiagui/pull/2751) page.
+- [Visual enhancements](https://github.com/decred/politeiagui/pull/2780) for proposals: handle censored/abandoned proposals, handle empty lists, make logo clickable.
+- Implemented [generic listeners](https://github.com/decred/politeiagui/pull/2769) that can subscribe and react to actions and state changes in any plugins.
 
 <a id="vspd" />
 
