Dev tweak text + mark removal candidates
- Simplify wording where possible.
- Put todos and hints in curly braces { like this }.
- Move some links to other phrases. Linking a phrase has a side effect
  of adding a visual emphasis to it. If we emphasize the most relevant
  words it may improve reading UX.
- I found that marking removal/merge candidates and actually removing or
  merging them in two separate commits is nice for recording the decision
  making process for the affected items.
- I plan to reorder changes and do more grouping but will do it in
  another commit to make this diff easier to read.

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -73,7 +73,7 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
-_dcrwallet is a wallet server used by command-line and graphical wallet applications._
+_dcrwallet is a wallet server used by command-line and graphical wallet apps._
 
 { _Check https://github.com/decred/dcrwallet/commits/master ._}
 
@@ -87,9 +87,10 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 
 { _Check https://github.com/decred/decrediton/commits/master ._}
 
-- Added a [ticket spent](https://github.com/decred/decrediton/pull/3770) entry to the revocation transaction details page.
-- Fixed a bug where [scrolling didn't](https://github.com/decred/decrediton/pull/3771) work when UI animations were disabled.
-- Fixed a bug in the Treasury Spending tab where a [never ending loading](https://github.com/decred/decrediton/pull/3769) button would occur.
+- Added revoked [ticket hash](https://github.com/decred/decrediton/pull/3770) to the Revocation transaction details page.
+- Fixed [scrolling not working](https://github.com/decred/decrediton/pull/3771) when UI animations were disabled.
+- Fixed a possible [never ending loading button](https://github.com/decred/decrediton/pull/3769) in the Treasury Spending tab.
+- Automated tests extended to verify the recent fixes.
 
 <a id="politeia" />
 
@@ -141,8 +142,8 @@ _vspd is server software for running a Voting Service Provider. A VSP votes on b
 
 { _Check https://github.com/decred/vspd/commits/master ._}
 
-- 5 Commits representing various optimizations, notably the removal of [global loggers](https://github.com/decred/vspd/pull/350).
-- Updated to [gin 1.8.1](https://github.com/decred/vspd/pull/349).
+- More refactoring to [remove global vars](https://github.com/decred/vspd/issues/339) to make the code more reusable.
+- Updated to [gin 1.8.1](https://github.com/decred/vspd/pull/349). { _minor, group_ }
 
 <a id="dcrlnd" />
 
@@ -152,13 +153,10 @@ _dcrlnd is Decred's Lightning Network node software. LN enables instant and low-
 
 { _Check https://github.com/decred/dcrlnd/commits/master ._}
 
-- Fixed the [expected location](https://github.com/decred/dcrlnd/pull/159) of the peers.json file when running an embedded dcrwallet install in SPV mode.
-- 'initchainsync' service is now started [after unlocking the wallet](https://github.com/decred/dcrlnd/pull/158). This new service can be used to track the progress of the initial chain sync process and is useful for clients that connect to a dcrlnd instance that is still in the initial startup stage to provide better feedback to the user.
-- Added a new RPC service that [provides endpoints to track](https://github.com/decred/dcrlnd/pull/158) the progress of the initial chain sync that happens after an LN wallet is created or unlocked but before the full RPC services are available.
-- Bumped [version](https://github.com/decred/dcrlnd/pull/158) to v0.3.5.
-- 4 commits representing various code optimizations/improvements.
-
-
+- Fixed the [expected location](https://github.com/decred/dcrlnd/pull/159) of the `peers.json` file when running an embedded dcrwallet install in SPV mode.
+- Added a new [Initial Chain Sync](https://github.com/decred/dcrlnd/pull/158) RPC service that allows to track the progress of the initial chain sync process and is useful for clients that connect to a dcrlnd instance that is still in the early startup stage to provide better feedback to the user.
+- Bumped [version](https://github.com/decred/dcrlnd/pull/158) to v0.3.5. { _part of 158_ }
+- 4 commits representing various code optimizations/improvements. { 157 }
 
 <a id="dcrdex" />
 
@@ -199,8 +197,9 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 
 { _Check https://github.com/planetdecred/dcrandroid/commits ._}
 
-In Progress:
-- Update API for getting [USD balance](https://github.com/planetdecred/dcrandroid/issues/633).
+In progress:
+
+- Update API for getting [USD balance](https://github.com/planetdecred/dcrandroid/issues/633). { _drop, it's not a PR_ }
 
 <a id="dcrios" />
 
@@ -208,8 +207,9 @@ In Progress:
 
 { _Check https://github.com/planetdecred/dcrios/commits/master ._}
 
-In Progress:
-- Update API for getting [USD balance](https://github.com/planetdecred/dcrios/issues/911).
+In progress:
+
+- Update API for getting [USD balance](https://github.com/planetdecred/dcrios/issues/911). { _drop, it's not a PR_ }
 
 <a id="godcr" />
 
@@ -219,25 +219,29 @@ _GoDCR is a lightweight desktop GUI wallet with integrated staking, privacy, Pol
 
 { _Check https://github.com/planetdecred/godcr/commits/master ._}
 
-- Updated the [Security Tools](https://github.com/planetdecred/godcr/pull/998) page.
-- New [layout](https://github.com/planetdecred/godcr/pull/1002) and styling for the 'More' tab. (SS Candidate)
-- Added [unit tests](https://github.com/planetdecred/godcr/pull/980) for WindowNavigation.
-- Fixed various layout issues for [mobile screens](https://github.com/planetdecred/godcr/pull/971). (SS Candidate)
-- Updated wallet [on-boarding screen](https://github.com/planetdecred/godcr/pull/996). Users can now choose to create a Decred or Bitcoin wallet. (SS Candiate)
-- Reworked [key event handling](https://github.com/planetdecred/godcr/pull/974) for the updated gioui package.
-- Fixed bug in the Governance tab where [click events were ignored](https://github.com/planetdecred/godcr/pull/1000).
-- Updated the [DEX registration](https://github.com/planetdecred/godcr/pull/900) function by adding a selector fee asset modal. Users can choose which fee asset when adding a new DEX server.
-- The [command prompt](https://github.com/planetdecred/godcr/pull/973) will no longer pop up when starting the wallet on Windows.
-- The Governance tab is now treated as a [master page](https://github.com/planetdecred/godcr/pull/979) with subpages. This fixes the crash that occurs when attempting to open the Governance page.
-- Updated to the ['V2' design](https://github.com/planetdecred/godcr/pull/969). This adds the main application navigation and implements a single wallet selection page. (SS Candidate)
-- When Privacy has been turned on, the auto-buyer will [only select](https://github.com/planetdecred/godcr/pull/958) from Mixed accounts. It also resets the auto ticket buyer wallet config.
-- [Restoration](https://github.com/planetdecred/godcr/pull/950) of wallets using a HEX private key. It also shows the HEX private key on the wallet backup page.
-- Refactored page and modal [navigation](https://github.com/planetdecred/godcr/pull/972). Removed some load methods.
-- Fixed a bug where deleting a watch-only wallet caused a [bug crash](https://github.com/planetdecred/godcr/pull/954).
-- Bumped the [gioui](https://github.com/planetdecred/godcr/pull/964) version.
-- Fixed watch-only wallet [settings menu bug](https://github.com/planetdecred/godcr/pull/970).
-- [Enhanced usability](https://github.com/planetdecred/godcr/pull/963) for mobile layouts.
-- [String variables](https://github.com/planetdecred/godcr/pull/906) have been localized. 
+{ _Group e.g. by new feature dev, UI design updates, bug fixes, internal._ }
+
+- Updated the [Security Tools](https://github.com/planetdecred/godcr/pull/998) page to V2 design.
+- New V2 [layout](https://github.com/planetdecred/godcr/pull/1002) and styling for the More tab.
+- Added [unit tests](https://github.com/planetdecred/godcr/pull/980) for the `app` package. Added running tests to GitHub workflow.
+- Fixed ~11 layout issues for [mobile screens](https://github.com/planetdecred/godcr/pull/971).
+- Updated wallet [onboarding design](https://github.com/planetdecred/godcr/pull/996) to support multiple assets. Users can now choose to create a Decred or Bitcoin wallet. { _pretty sure Bitcoin wallet option is just a mockup atm - confirm with devs_ }
+- Fixed [key event handling](https://github.com/planetdecred/godcr/pull/974) for the updated gioui package.
+- Fixed buttons [not working](https://github.com/planetdecred/godcr/pull/1000) on the Governance tab. Fixed app crash due to division by zero
+- Added fee asset selector to the [DEX registration](https://github.com/planetdecred/godcr/pull/900) flow.
+- Fixed unintended [command prompt](https://github.com/planetdecred/godcr/pull/973) window on Windows.
+- Fixed a [crash](https://github.com/planetdecred/godcr/pull/979) when opening the Governance page.
+- Started update to the ['V2' design](https://github.com/planetdecred/godcr/pull/969). This adds the main app navigation and implements a wallet selection page.
+- When Privacy has been turned on, the auto ticket buyer will only allow to [select a mixed account](https://github.com/planetdecred/godcr/pull/958) to fund ticket purchases. It also resets the config saved earlier to prevent accidental use of unmixed funds.
+- Allow to restore wallets from a [hex private key](https://github.com/planetdecred/godcr/pull/950). It also shows the private key hex code on the wallet backup page.
+- Refactored page and modal [navigation](https://github.com/planetdecred/godcr/pull/972) to remove duplication and separate concerns.
+- Fixed a [crash](https://github.com/planetdecred/godcr/pull/954) when deleting a watch-only wallet..
+- Bumped the [gioui version](https://github.com/planetdecred/godcr/pull/964).
+- Fixed being [unable to access](https://github.com/planetdecred/godcr/pull/970) watch-only wallet settings menu..
+- Enhanced usability for [mobile device layouts](https://github.com/planetdecred/godcr/pull/963) (~11 fixes and changes).
+- New string variables have been [localized](https://github.com/planetdecred/godcr/pull/906) to facilitate translations to other languages.
+
+{ image candidates: 963, 950, 969, 996, 971!, 1002 }
 
 <a id="dcrdata" />
 
