--- a/journal/202206.md
+++ b/journal/202206.md
@@ -251,9 +251,11 @@ _dcrdata is an explorer for Decred blockchain and off-chain data like Politeia p
 
 { _Check https://github.com/decred/dcrdata/commits/master ._}
 
-- [Updated](https://github.com/decred/dcrdata/pull/1922) btcd in swapscan-btc.
-- Bumped [module](https://github.com/decred/dcrdata/pull/1922) major versions.
-- Fixed incorrect [vote status](https://github.com/decred/dcrdata/pull/1919) display. 
+- [Updated](https://github.com/decred/dcrdata/pull/1922) btcd in swapscan-btc. { _drop, part of 1922_ }
+- Started the dev cycle for the [dcrdata app v6.2](https://github.com/decred/dcrdata/pull/1922) which will target Decred/dcrd v1.8. Bumped `dcrdata` module to v8 and made first breaking changes and refactoring.
+- Fixed incorrect [vote status](https://github.com/decred/dcrdata/pull/1919) display.
+- Removed experimental [CockroachDB](https://github.com/decred/dcrdata/pull/1902) support.
+- Use [Clipboard API](https://github.com/decred/dcrdata/pull/1917) on the UI.
 
 **[dcrdocs](https://github.com/decred/dcrdocs)**
 
@@ -261,14 +263,13 @@ _dcrdocs is the source code for Decred [user documentation](https://docs.decred.
 
 { _Check https://github.com/decred/dcrdocs/commits/master ._}
 
-- Updated [CoinShuffle++ server name](https://github.com/decred/dcrdocs/pull/1204). 
-- Updated [block reward values](https://github.com/decred/dcrdocs/pull/1202) from 60/30/10 to 10/80/10 as defined in [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki).
-- Advanced issuance page now makes use of [SVGs for the images](https://github.com/decred/dcrdocs/pull/1200) instead of PNGs since they scale better and are easier to modify if needed in the future.
-- Updated [per vote percentage](https://github.com/decred/dcrdocs/pull/1201) in issuance docs from 6% to each of the 5 voters chosen in a block to 16%.
-- Fixes made to [dark mode only](https://github.com/decred/dcrdocs/pull/1199) images.
-- Updates to [issuance docs](https://github.com/decred/dcrdocs/pull/1198) for [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki), including new graphs.
-- Added [vote version](https://github.com/decred/dcrdocs/pull/1197) release dates.
-- Added [1.7 consensus votes](https://github.com/decred/dcrdocs/pull/1197) to archive.
+- Updated [CoinShuffle++ server name](https://github.com/decred/dcrdocs/pull/1204) to [mix.decred.org](https://mix.decred.org/). Note that it also uses a new certificate.
+- Updated [block reward values](https://github.com/decred/dcrdocs/pull/1202) on the docs home page from 60/30/10 to 10/80/10 as defined in [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki). { _maybe merge with other DCP-10 updates_ }
+- Issuance page graphs [changed to SVG](https://github.com/decred/dcrdocs/pull/1200) since they scale better and are easier to modify if needed in the future.
+- Updated [per vote percentage](https://github.com/decred/dcrdocs/pull/1201) in issuance docs from 6% to each of the 5 voters chosen in a block to 16%. { _drop, minor, consider it part of 1198_ }
+- Fixes for [dark mode only](https://github.com/decred/dcrdocs/pull/1199) images.
+- [Updated](https://github.com/decred/dcrdocs/pull/1198) the [Issuance page](https://docs.decred.org/advanced/issuance/) for [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki), including new graphs.
+- Added [1.7 consensus votes](https://github.com/decred/dcrdocs/pull/1197) to Consensus Vote Archive. Also added versions and release dates of Decred software implementing consensus changes.
 
 { image candidates: 1198 }
 
@@ -280,11 +281,11 @@ _dcrweb is the source code for the decred.org website._
 
 { _Check https://github.com/decred/dcrweb/commits/master ._}
 
-- Added GoDCR to the [wallets page](https://github.com/decred/dcrweb/pull/1044). { _July but we can make 1 small exception_ }
-- [Removed 1.6](https://github.com/decred/dcrweb/pull/1049) release page.
+- Added GoDCR to the [Wallets page](https://github.com/decred/dcrweb/pull/1044). { _July but we can make 1 small exception_ }
+- Removed the outdated [1.6 Release page](https://github.com/decred/dcrweb/pull/1049).
 - [Updated](https://github.com/decred/dcrweb/pull/1048) Hugo, nginx, and Lottie webplayer. 
-- Removed [contributors page](https://github.com/decred/dcrweb/pull/1047).
-- Added [disclaimer to exchanges page](https://github.com/decred/dcrweb/pull/1043) letting users know only DCRDEX is self custodial and will not request additional information.
+- Removed [Contributors page](https://github.com/decred/dcrweb/pull/1047) after multiple discussions with the general consensus that it had poorly reflected reality.
+- Added [disclaimer to Exchanges page](https://github.com/decred/dcrweb/pull/1043) letting users know only DCRDEX is self custodial and will not request additional information.
 
 { _Check for other new/updated repos in:_
 
