Dev bring back TinyDecred

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -257,6 +257,18 @@ _dcrdata is an explorer for Decred blockchain and off-chain data like Politeia p
 - Removed experimental [CockroachDB](https://github.com/decred/dcrdata/pull/1902) support.
 - Use [Clipboard API](https://github.com/decred/dcrdata/pull/1917) on the UI.
 
+<a id="tinydecred" />
+
+**[TinyDecred](https://github.com/decred/tinydecred)**
+
+_TinyDecred is a toolkit for integrating Decred into Python projects. It includes an experimental light GUI wallet based on PyQt5._
+
+{ _Check https://github.com/decred/tinydecred/commits/master ._ }
+
+- { buck has been hacking on something very interesting, ask him for the details https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg }
+
+<a id="dcrdocs" />
+
 **[dcrdocs](https://github.com/decred/dcrdocs)**
 
 _dcrdocs is the source code for Decred [user documentation](https://docs.decred.org/)._
