--- a/journal/202206.md
+++ b/journal/202206.md
@@ -59,15 +59,11 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 
 - [Optimized](https://github.com/decred/dcrd/pull/2957) cumulative work calculation using the recent zero-allocation [256-bit integers](https://github.com/decred/dcrd/pull/2787) package. The result is ~100 MiB less heap usage on average, and ~5% faster initial blockchain sync time.
 - Support [clean shutdown](https://github.com/decred/dcrd/pull/2958) on more Unix variants and also on certain Windows events (user logging off, closing terminal window, system shutdown).
-- [Return](https://github.com/decred/dcrd/pull/2959) uint256 types from chain work method. { _minor, group_ }
 - [Inverted order](https://github.com/decred/dcrd/pull/2956) in which transactions are added to the mempool during a reorg to correct the calculation of transaction chain statistics under special circumstances. { _Did it happen in the wild? What was the impact?_ }
-- [Updated](https://github.com/decred/dcrd/pull/2960) Alpine-based Docker image. { _minor, group_ }
 - [Removed](https://github.com/decred/dcrd/pull/2961) the spend journal pruning code that became unneeded with the removal of the address index.
-- [Changed](https://github.com/decred/dcrd/pull/2962) mempool test harness to use valid fees. { _minor, group_ }
 - Explicitly [reject](https://github.com/decred/dcrd/pull/2963) standalone `treasurybase` transactions. { _We will likely skip/group this as "minor" but to understand this I wonder what would be a simple description of "proper" (i.e. "not standalone") `treasurybase` transactions?_ }
 - [Removed](https://github.com/decred/dcrd/pull/2964) the policy that allowed low-fee/free transactions to get relayed and mined. It served its purpose in the past at the cost of some downsides. Now it is unneeded and users can bump the priority of "stuck" transactions using additional transactions (aka Child Pays For Parent - CPFP). Related `--norelaypriority` and `--limitfreerelay` CLI flags were deprecated.
-
-- Smaller improvements to group { 2965 2966 }
+- ~5 smaller improvement PRs. { 2959 2960 2962 2965 2966 }
 
 <a id="dcrwallet" />
 
@@ -87,10 +83,10 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 
 { _Check https://github.com/decred/decrediton/commits/master ._}
 
-- Added revoked [ticket hash](https://github.com/decred/decrediton/pull/3770) to the Revocation transaction details page.
+- Added revoked [ticket hash](https://github.com/decred/decrediton/pull/3770) to the Revocation transaction page.
 - Fixed [scrolling not working](https://github.com/decred/decrediton/pull/3771) when UI animations were disabled.
 - Fixed a possible [never ending loading button](https://github.com/decred/decrediton/pull/3769) in the Treasury Spending tab.
-- Automated tests extended to verify the recent fixes.
+- Extended automated tests to verify the recent fixes.
 
 <a id="politeia" />
 
@@ -111,22 +107,19 @@ Backend:
 - Improved [error handling](https://github.com/decred/politeia/pull/1650) in mysql key-value store implementation.
 - Improved [identity logging](https://github.com/decred/politeia/pull/1647) in the dbutil tool.
 - Updated and improved [signal-handling](https://github.com/decred/politeia/pull/1644) logic in politeiavoter by supporting SIGTERM. On Windows, this will shutdown politeiavoter cleanly if the user logs off or if the system is shutting down.
-- 2 commits representing improvements/corrections. { 1643 1646 }
+- ~2 smaller improvement PRs. { 1643 1646 }
 
 GUI:
 
-- Proposals [user experience improvements](https://github.com/decred/politeiagui/pull/2795). { _minor, group_ }
 - Fixed the submission of [empty comments](https://github.com/decred/politeiagui/pull/2783).
-- Allow [dropdown header](https://github.com/decred/pi-ui/pull/455) customization.
-- Various other optimizations and improvements.
+- Support [dropdown header](https://github.com/decred/pi-ui/pull/455) customization.
+- A few other optimizations and improvements.
 
 GUI migration to the new [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure):
 
 - Fixed GUI theme [not saving](https://github.com/decred/politeiagui/pull/2801) on page refresh.
 - Fixed a link go [Comments](https://github.com/decred/politeiagui/pull/2802) on proposals list.
 - Improved UX and handing of [proposal version diffing](https://github.com/decred/politeiagui/pull/2789).
-- Fixes to [plugins setup](https://github.com/decred/politeiagui/pull/2799). { _drop, consider it a part of 2775_ }
-- [Webpack](https://github.com/decred/politeiagui/pull/2798) fixes. { _group_ }
 - Implemented showing of [proposal](https://github.com/decred/politeiagui/pull/2792) attachments.
 - Fixed navigating to [external links](https://github.com/decred/politeiagui/pull/2793).
 - Implemented [default behavior](https://github.com/decred/politeiagui/pull/2775) for plugins to improve experience for developers of new plugins and Politeia-like apps.
@@ -143,7 +136,6 @@ _vspd is server software for running a Voting Service Provider. A VSP votes on b
 { _Check https://github.com/decred/vspd/commits/master ._}
 
 - More refactoring to [remove global vars](https://github.com/decred/vspd/issues/339) to make the code more reusable.
-- Updated to [gin 1.8.1](https://github.com/decred/vspd/pull/349). { _minor, group_ }
 
 <a id="dcrlnd" />
 
@@ -155,8 +147,7 @@ _dcrlnd is Decred's Lightning Network node software. LN enables instant and low-
 
 - Fixed the [expected location](https://github.com/decred/dcrlnd/pull/159) of the `peers.json` file when running an embedded dcrwallet install in SPV mode.
 - Added a new [Initial Chain Sync](https://github.com/decred/dcrlnd/pull/158) RPC service that allows to track the progress of the initial chain sync process and is useful for clients that connect to a dcrlnd instance that is still in the early startup stage to provide better feedback to the user.
-- Bumped [version](https://github.com/decred/dcrlnd/pull/158) to v0.3.5. { _part of 158_ }
-- 4 commits representing various code optimizations/improvements. { 157 }
+- 4 commits with smaller improvements. { 157 }
 
 <a id="dcrdex" />
 
@@ -166,30 +157,35 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 
 { _Check https://github.com/decred/dcrdex/commits/master ._}
 
-{ _Group changes by User-facing/internal/dev, or by asset._ }
+User-facing changes:
 
 - Added support for [mixed DCR](https://github.com/decred/dcrdex/pull/1498) accounts.
-- Added results of the first ETH [smart contract audit](https://github.com/decred/dcrdex/pull/1643) performed by InterFi Network (mirrored in [their repo](https://github.com/interfinetwork/smart-contract-audits/blob/audit-updates/DecredDEX_AuditReport_InterFi.pdf)). The audit concluded that Solidity code has low risk severity and "Decred DEX's centralization risk correlated to the active owner is NULL".
-- Fixed [funds unlocking](https://github.com/decred/dcrdex/pull/1642) math for smaller lot sizes.
-- Redesigned [connection management](https://github.com/decred/dcrdex/pull/1474) to be more robust and have a nicer API. { _guessing a bit here._ }
-- Print better [version and compatibility](https://github.com/decred/dcrdex/pull/1645) info in `dexcctl` output.
 - Added a button to [copy address](https://github.com/decred/dcrdex/pull/1639) on the Wallets page. { _minor, maybe group_ }
 - Made cancel button [change to spinner](https://github.com/decred/dcrdex/pull/1640) and report any errors in the form.
-- Added utility for running different combinations of client [harness tests](https://github.com/decred/dcrdex/pull/1632) on simnet.
-- Added support for [Zcash](https://github.com/decred/dcrdex/pull/1570) (decoding blocks and transactions, signing inputs, tests).
-- Upgraded to [Litecoin v0.21.2](https://github.com/decred/dcrdex/pull/1536). Custom decoding of block and transaction data was added to support Litecoin's new [Extension Blocks](https://github.com/litecoin-project/lips/blob/master/lip-0002.mediawiki) and a [MimbleWimble sidechain](https://github.com/litecoin-project/lips/blob/master/lip-0003.mediawiki).
-- Added [metering](https://github.com/decred/dcrdex/pull/1629) where processing of new blocks will not be triggered more frequent than every 10 seconds. e.g. in Ethereum occasionally several blocks are generated in a single second.
-- [Generalized](https://github.com/decred/dcrdex/pull/1656) load testing to support all markets.
 - Fixed [order age display](https://github.com/decred/dcrdex/pull/1667) when server system clock is behind client's.
-- Reduced [lock contention](https://github.com/decred/dcrdex/pull/1563) and fixed a memory leak in swap code.
 - Allow users to switch between [different host names](https://github.com/decred/dcrdex/pull/1605) of the same DEX server.
-- Updated to latest [Solidity compiler](https://github.com/decred/dcrdex/pull/1679).
 - Added a [Send](https://github.com/decred/dcrdex/pull/1611) operation that doesn't subtract the fee from the amount, unlike the Withdraw operation.
 - Added SPV support for [native (built-in) DCR wallets](https://github.com/decred/dcrdex/pull/1633).
 - [Added support](https://github.com/decred/dcrdex/pull/1659) for [Descriptor Wallets](https://outputdescriptors.org/) which became default in [Bitcoin Core v23](https://bitcoincore.org/en/releases/23.0/).
 
-- Numerous smaller fixes and improvements { 1651 1655 1675 1680 1668 1685 1689 }
-- Bug fixes { 1647 1665 1662 1644 1677/race 1669*4 }
+Asset support progress:
+
+- Added results of the first ETH [smart contract audit](https://github.com/decred/dcrdex/pull/1643) performed by InterFi Network (mirrored in [their repo](https://github.com/interfinetwork/smart-contract-audits/blob/audit-updates/DecredDEX_AuditReport_InterFi.pdf)). The audit concluded that Solidity code has low risk severity and "Decred DEX's centralization risk correlated to the active owner is NULL".
+- Updated to latest [Solidity compiler](https://github.com/decred/dcrdex/pull/1679).
+- Added support for [Zcash](https://github.com/decred/dcrdex/pull/1570) (decoding blocks and transactions, signing inputs, tests).
+- Upgraded to [Litecoin v0.21.2](https://github.com/decred/dcrdex/pull/1536). Custom decoding of block and transaction data was added to support Litecoin's new [Extension Blocks](https://github.com/litecoin-project/lips/blob/master/lip-0002.mediawiki) and a [MimbleWimble sidechain](https://github.com/litecoin-project/lips/blob/master/lip-0003.mediawiki).
+- [Generalized](https://github.com/decred/dcrdex/pull/1656) load testing to support all markets.
+
+Internal, developer, and other changes:
+
+- Fixed [funds unlocking](https://github.com/decred/dcrdex/pull/1642) math for smaller lot sizes.
+- Redesigned [connection management](https://github.com/decred/dcrdex/pull/1474) to be more robust and have a nicer API. { _guessing a bit here._ }
+- Print better [version and compatibility](https://github.com/decred/dcrdex/pull/1645) info in `dexcctl` output.
+- Added utility for running different combinations of client [harness tests](https://github.com/decred/dcrdex/pull/1632) on simnet.
+- Added [metering](https://github.com/decred/dcrdex/pull/1629) where processing of new blocks will not be triggered more frequent than every 10 seconds. e.g. in Ethereum occasionally several blocks are generated in a single second.
+- Reduced [lock contention](https://github.com/decred/dcrdex/pull/1563) and fixed a memory leak in swap code.
+- ~7 smaller fixes and improvements. { 1651 1655 1675 1680 1668 1685 1689 }
+- ~9 bug fixes { 1647 1665 1662 1644 1677/race 1669*4 }
 
 <a id="dcrandroid" />
 
