Dev group GoDCR changes by type/topic

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -217,25 +217,39 @@ _GoDCR is a lightweight desktop GUI wallet with integrated staking, privacy, Pol
 
 { _Group e.g. by new feature dev, UI design updates, bug fixes, internal._ }
 
-- Updated the [Security Tools](https://github.com/planetdecred/godcr/pull/998) page to V2 design.
-- New V2 [layout](https://github.com/planetdecred/godcr/pull/1002) and styling for the More tab.
-- Added [unit tests](https://github.com/planetdecred/godcr/pull/980) for the `app` package. Added running tests to GitHub workflow.
-- Fixed ~11 layout issues for [mobile screens](https://github.com/planetdecred/godcr/pull/971).
-- Updated wallet [onboarding design](https://github.com/planetdecred/godcr/pull/996) to support multiple assets. Users can now choose to create a Decred or Bitcoin wallet. { _pretty sure Bitcoin wallet option is just a mockup atm - confirm with devs_ }
-- Fixed [key event handling](https://github.com/planetdecred/godcr/pull/974) for the updated gioui package.
-- Fixed buttons [not working](https://github.com/planetdecred/godcr/pull/1000) on the Governance tab. Fixed app crash due to division by zero
+Feature development:
+
 - Added fee asset selector to the [DEX registration](https://github.com/planetdecred/godcr/pull/900) flow.
-- Fixed unintended [command prompt](https://github.com/planetdecred/godcr/pull/973) window on Windows.
-- Fixed a [crash](https://github.com/planetdecred/godcr/pull/979) when opening the Governance page.
-- Started update to the ['V2' design](https://github.com/planetdecred/godcr/pull/969). This adds the main app navigation and implements a wallet selection page.
 - When Privacy has been turned on, the auto ticket buyer will only allow to [select a mixed account](https://github.com/planetdecred/godcr/pull/958) to fund ticket purchases. It also resets the config saved earlier to prevent accidental use of unmixed funds.
 - Allow to restore wallets from a [hex private key](https://github.com/planetdecred/godcr/pull/950). It also shows the private key hex code on the wallet backup page.
-- Refactored page and modal [navigation](https://github.com/planetdecred/godcr/pull/972) to remove duplication and separate concerns.
-- Fixed a [crash](https://github.com/planetdecred/godcr/pull/954) when deleting a watch-only wallet..
-- Bumped the [gioui version](https://github.com/planetdecred/godcr/pull/964).
-- Fixed being [unable to access](https://github.com/planetdecred/godcr/pull/970) watch-only wallet settings menu..
+
+Mobile app adaptation:
+
 - Enhanced usability for [mobile device layouts](https://github.com/planetdecred/godcr/pull/963) (~11 fixes and changes).
+- Fixed ~11 more [layout issues](https://github.com/planetdecred/godcr/pull/971) for mobile screens.
+
+UI design updates:
+
+- Updated the [Security Tools](https://github.com/planetdecred/godcr/pull/998) page to V2 design.
+- New V2 [layout](https://github.com/planetdecred/godcr/pull/1002) and styling for the More tab.
+- Updated wallet [onboarding design](https://github.com/planetdecred/godcr/pull/996) to support multiple assets. Users can now choose to create a Decred or Bitcoin wallet. { _pretty sure Bitcoin wallet option is just a mockup atm - confirm with devs_ }
+- Started update to the ['V2' design](https://github.com/planetdecred/godcr/pull/969). This adds the main app navigation and implements a wallet selection page.
+
+Internal changes:
+
+- Added [unit tests](https://github.com/planetdecred/godcr/pull/980) for the `app` package. Added running tests to GitHub workflow.
+- Refactored page and modal [navigation](https://github.com/planetdecred/godcr/pull/972) to remove duplication and separate concerns.
+- Bumped the [gioui version](https://github.com/planetdecred/godcr/pull/964).
 - New string variables have been [localized](https://github.com/planetdecred/godcr/pull/906) to facilitate translations to other languages.
+
+Bug fixes:
+
+- Fixed [key event handling](https://github.com/planetdecred/godcr/pull/974) for the updated gioui package.
+- Fixed buttons [not working](https://github.com/planetdecred/godcr/pull/1000) on the Governance tab. Fixed app crash due to division by zero
+- Fixed unintended [command prompt](https://github.com/planetdecred/godcr/pull/973) window on Windows.
+- Fixed a [crash](https://github.com/planetdecred/godcr/pull/979) when opening the Governance page.
+- Fixed a [crash](https://github.com/planetdecred/godcr/pull/954) when deleting a watch-only wallet..
+- Fixed being [unable to access](https://github.com/planetdecred/godcr/pull/970) watch-only wallet settings menu.
 
 { image candidates: 963, 950, 969, 996, 971!, 1002 }
 
