Dev grouping pass 2

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -261,7 +261,6 @@ _dcrdata is an explorer for Decred blockchain and off-chain data like Politeia p
 
 { _Check https://github.com/decred/dcrdata/commits/master ._}
 
-- [Updated](https://github.com/decred/dcrdata/pull/1922) btcd in swapscan-btc. { _drop, part of 1922_ }
 - Started the dev cycle for the [dcrdata app v6.2](https://github.com/decred/dcrdata/pull/1922) which will target Decred/dcrd v1.8. Bumped `dcrdata` module to v8 and made first breaking changes and refactoring.
 - Fixed incorrect [vote status](https://github.com/decred/dcrdata/pull/1919) display.
 - Removed experimental [CockroachDB](https://github.com/decred/dcrdata/pull/1902) support.
@@ -286,11 +285,9 @@ _dcrdocs is the source code for Decred [user documentation](https://docs.decred.
 { _Check https://github.com/decred/dcrdocs/commits/master ._}
 
 - Updated [CoinShuffle++ server name](https://github.com/decred/dcrdocs/pull/1204) to [mix.decred.org](https://mix.decred.org/). Note that it also uses a new certificate.
-- Updated [block reward values](https://github.com/decred/dcrdocs/pull/1202) on the docs home page from 60/30/10 to 10/80/10 as defined in [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki). { _maybe merge with other DCP-10 updates_ }
 - Issuance page graphs [changed to SVG](https://github.com/decred/dcrdocs/pull/1200) since they scale better and are easier to modify if needed in the future.
-- Updated [per vote percentage](https://github.com/decred/dcrdocs/pull/1201) in issuance docs from 6% to each of the 5 voters chosen in a block to 16%. { _drop, minor, consider it part of 1198_ }
 - Fixes for [dark mode only](https://github.com/decred/dcrdocs/pull/1199) images.
-- [Updated](https://github.com/decred/dcrdocs/pull/1198) the [Issuance page](https://docs.decred.org/advanced/issuance/) for [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki), including new graphs.
+- Updates for the [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki): [New numbers and graphs](https://github.com/decred/dcrdocs/pull/1198) for the [Issuance page](https://docs.decred.org/advanced/issuance/), updated [block reward values](https://github.com/decred/dcrdocs/pull/1202) on the docs home page.
 - Added [1.7 consensus votes](https://github.com/decred/dcrdocs/pull/1197) to Consensus Vote Archive. Also added versions and release dates of Decred software implementing consensus changes.
 
 { image candidates: 1198 }
